@@ -7,4 +7,6 @@ Changelog
 4, fix 'File name too long cause Notepad for Kindle will auto cut off extra words'
 5, clean unused script
 6, modify git.sh as I always forget to edit changelog
-7, 
+
+testing:
+1, clean up code
